# x1zzLang

./: .cargoignore  .gitattribute  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_kr.md  SPRINT_REPORT.md  commitGuide.txt  final_result_chart.html  main.xzz  result_file_input_chart.html
.github/workflows/: ci.yml  release.yml
a/: x1zz.toml
benches/: benchmark_pipeline.xzz  benchmark_report.html  pandas_pipeline.py  run_benchmark.py
cli_integration/: __init__.py  _test_protocol.py  ir_converter.py  nqp_predict.py
docs/: ARCHITECTURE.md  WORKSPACE.md
examples/: adm_code_to_station.csv  poc_correct.xzz  poc_correct_generated.rs  poc_full_pipeline.xzz  poc_script.xzz  poc_script_generated.rs  seoul_air_2026.csv  viz_bar_chart.xzz  viz_line_chart.xzz  viz_pie_chart.xzz  viz_scatter_chart.xzz
examples/x1zz_new_example/: x1zz.toml
src/: cli.rs  main.rs  predict.rs  project.rs  schema.rs  ux.rs
test/: test.py  test.xzz
x1zz-compiler/: Cargo.toml
x1zz-compiler/src/: ast.rs  codegen.rs  emitter.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  token.rs
x1zz-core/: Cargo.toml
x1zz-core/src/: ast.rs  error.rs  lib.rs  token.rs
x1zz-exec/: Cargo.toml
x1zz-exec/src/: lib.rs  main.rs  runtime.rs
x1zz-runner/: Cargo.toml
x1zz-runner/src/: main.rs
x1zz-sde/: Cargo.toml  sde_params.toml
x1zz-sde/data/raw/: .gitkeep
x1zz-sde/src/: lib.rs  main.rs
x1zz-sde/src/sde/: benchmark.rs  correlator.rs  exporter.rs  generator.rs  mod.rs  mutator.rs  params.rs
x1zz-server/: Cargo.toml
x1zz-server/src/: main.rs
