[workspace]

members = [
    "x1zz-compiler",
    "x1zz-sde",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jangseowoo <ax1s.x1zz.com>"]
license = "Apache-2.0"
repository = "https://github.com/ax1sofficially-alt/x1zzLang"

[package]
name = "x1zz"
version = "0.1.0"
edition = "2024"
authors = ["Jangseowoo <ax1s.x1zz.com>"]
license = "Apache-2.0"

[[bin]]
name = "x1zz"
path = "src/main.rs"

[profile.release]
opt-level     = 3
lto           = true      # Link-Time Optimization
codegen-units = 1         # 단일 코드 유닛 = 최대 최적화

[features]
# poc-examples 피처가 없으면 polars/encoding_rs 의존성이 없는
# poc_*_generated.rs examples는 빌드에서 자동 제외된다.
poc-examples = []

[[example]]
name = "poc_script_generated"
required-features = ["poc-examples"]

[[example]]
name = "poc_correct_generated"
required-features = ["poc-examples"]

[dependencies]
x1zz-compiler = { path = "x1zz-compiler" }
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
indicatif = { version = "0.17" }
colored = { version = "2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
csv = { version = "1.3" }
anyhow = { version = "1.0" }
encoding_rs = { version = "0.8" }
