[workspace]

members = [
  "x1zz-core",
  "x1zz-compiler",
  "x1zz-runner",
  "x1zz-exec",
  "x1zz-server"
]
resolver = "2"



[workspace.package]
version = "0.2.8"
edition = "2024"
authors = ["Jangseowoo <ax1s.x1zz.com>"]
license = "Apache-2.0"
repository = "https://github.com/x1zzdev/x1zzLang"

# ── 루트 패키지 (x1zz CLI 바이너리) ─────────────────────────────────────────────
[package]
name = "x1zz"
version = {workspace = true}
edition = "2024"
authors = ["Jangseowoo <ax1s.x1zz.com>"]
license = "Apache-2.0"
description = "x1zzLang — scripting on the surface, compiled at its core. A data pipeline language that compiles .xzz scripts into optimized Polars LazyFrame execution plans."
keywords = ["data", "pipeline", "polars", "compiler", "csv"]
categories = ["command-line-utilities", "compilers", "science"]
repository = "https://github.com/x1zzdev/x1zzLang"
readme = "README.md"

exclude = [
    "benches/**",
    "examples/**/*.csv",
    "examples/**/*.png",
    "examples/**/*.html",
    "cli_integration/**",
    "test/**",
    "__pycache__/**",
    "*.py",
    "core_code.zip",
]

[[bin]]
name = "x1zz"
path = "src/main.rs"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[features]
poc-examples = []

[[example]]
name = "poc_script_generated"
required-features = ["poc-examples"]

[[example]]
name = "poc_correct_generated"
required-features = ["poc-examples"]

# ── CLI 의존성 (경량 — Polars/Tokio 없음) ────────────────────────────────────
[dependencies]
# 컴파일러 (Lexer/Parser/Codegen/Emitter) — Polars 없음
# `emit` 명령어에서 emit_rust() 호출에 필요
x1zz-compiler = { version = "0.2.1", path = "x1zz-compiler" }

# CLI 인자 파싱
clap = { version = "4.4", features = ["derive", "cargo"] }

# UX 헬퍼
indicatif = { version = "0.17" }
colored   = { version = "2.1" }

# 직렬화
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# `import` 명령어 전용 (CSV 스키마 추론)
csv         = { version = "1.3" }
anyhow      = { version = "1.0" }
encoding_rs = { version = "0.8" }

# ⚠️  REMOVED: tokio — run 명령어는 x1zz-runner 서브프로세스로 위임
# ⚠️  REMOVED: x1zz-exec / Polars — CLI 바이너리에 절대 포함되지 않음
