[package]
name = "x1zz-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "x1zzLang compiler core — Lexer, Parser, AST, Type Checker, Codegen, and Polars LazyFrame runtime for .xzz data pipeline scripts."
keywords = ["compiler", "data", "polars", "pipeline", "csv"]
categories = ["compilers", "science"]

[dependencies]
# Polars 런타임 엔진 (x1zz-sde 버전과 통일)
polars = { version = "0.53", features = ["lazy", "csv", "strings", "regex"] }

# 한국 공공데이터 EUC-KR → UTF-8 디코딩
encoding_rs = "0.8"

serde     = { version = "1", features = ["derive"] }
serde_json = "1"
