[package]
name = "x1zz-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "x1zzLang compiler — Lexer, Parser, AST, Type Checker, Codegen, and Rust Emitter for .xzz scripts. No heavy runtime dependencies."
keywords = ["compiler", "data", "pipeline", "lexer", "parser"]
categories = ["compilers"]

[[bin]]
name = "x1zz-compiler"
path = "src/main.rs"

[dependencies]
# 공유 핵심 타입 (AST, Token, Error) — 무거운 의존성 없음
x1zz-core = { version = "0.2.1", path = "../x1zz-core" }

serde     = { version = "1", features = ["derive"] }
serde_json = "1"
