[package]
name = "x1zz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "x1zzLang core types — AST nodes, tokens, and shared data structures. Zero heavy dependencies."
keywords = ["compiler", "ast", "data", "pipeline"]
categories = ["compilers"]

[dependencies]
serde = { version = "1", features = ["derive"] }
