[package]
name = "x1zz-sde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polars = { version = "0.53", features = [
    "lazy", "csv", "json", "dtype-full", "new_streaming"
]}
rand = "0.10"
rand_distr = "0.6"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
chrono = "0.4"
indicatif = "0.18"

[profile.release]
opt-level     = 3
lto           = true      # Link-Time Optimization
codegen-units = 1         # 단일 코드 유닛 = 최대 최적화
